# Rush-PoC-Software

./: README.md
rustman/: Cargo.toml
rustman/src/: app.rs  http_client.rs  main.rs  message.rs  view.rs
rustman/src/app/: a12.rs  mod.rs
rustman/src/view/: mod.rs  v12.rs
