[package]
name = "rustman"
version = "0.1.0"
edition = "2024"

[features]
iced12=["iced"]

[dependencies]
iced = { version = "0.12", features = ["tokio", "advanced"],optional=true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }